package com.pokesim.model.game;

/**
 * Enum zawierający wybory dostępne w mieście
 */

public enum CityAction {
    FIGHT,
    HEAL,
    BUY_POKEMON,
}
